# halcheck-hs

./: falsify-diff  hedgehog-diff
examples/: .gitignore  LICENSE  cabal.project  examples.cabal  fourmolu.yaml  make_table  results.txt
examples/html/: bench-as-by-exec-variational.html  bench-as-by-exec.html  bench-as-naive.html  bench-as-sequence.html  bench-as-weighted.html  bench-binary-search-tree.html  bench-bool.html  bench-connected-graph.html  bench-distinct-list.html  bench-graph.html  bench-lambda.html  bench-list.html  bench-pathological.html  bench-red-black-tree.html  bench-sorted-list.html  bench-tree.html  bench-variation-state.html
examples/src/: Bench.hs  Test.hs
examples/src/Control/Monad/: Gen.hs
examples/src/Data/: Featured.hs
examples/src/Example/: Bool.hs  Graph.hs  Lambda.hs  List.hs  Pathological.hs  Tree.hs
examples/src/Example/NonInterference/: Register.hs  Stack.hs
examples/src/Example/NonInterference/Register/: Flags.hs  Generation.hs  Indist.hs  Instructions.hs  Labels.hs  Machine.hs  Memory.hs  Mutate.hs  Primitives.hs  Rules.hs  SSNI.hs  Shrinking.hs  Zipper.hs
examples/src/Example/NonInterference/Stack/: Flags.hs  Generation.hs  GenericMachine.hs  Instr.hs  LaTeX.hs  Labels.hs  Machine.hs  Observable.hs  ObservableInst.hs  Pretty.hs  Trace.hs  Util.hs
examples/src/Language/: Falsify.hs  FalsifyHC.hs  Hedgehog.hs  HedgehogHC.hs  QuickCheck.hs  QuickCheckHC.hs  Syntax.hs
falsify-hc/lib/: falsify-hc.cabal
hedgehog-hc/: hedgehog-hc.cabal
hedgehog-hc/src/Hedgehog/: Gen.hs
hedgehog-hc/src/Hedgehog/Internal/: Gen.hs  Property.hs  Seed.hs
hedgehog-hc/test/Test/Hedgehog/: Applicative.hs  Confidence.hs  Filter.hs  Skip.hs  Text.hs  Zip.hs
